# homepage

./: .eslintrc.js  .gitignore  404.html  Cargo.toml  LICENSE  README.md  asset-manifest.json  frontend.js  frontend_bg.wasm  index.html  justfile  manifest.json  package-lock.json  package.json  precache-manifest.4d301ecf99afb6326ab7b2a986eefaad.js  precache-manifest.78f34383b1ea5f30253664115cbc86c3.js  precache-manifest.7b710f4b16957b76bd286366bd7bec72.js  precache-manifest.7e63414dcd1bb9b933197d16aebe2c4a.js  precache-manifest.82ac888b5dd9b4d19b1d1a9d7d6281f2.js  precache-manifest.8f9399c3f6697a9901b6d4770115383f.js  precache-manifest.91801c555923222c150ef515ada724b2.js  precache-manifest.9a278cffbae31df9ab2bb1c4df963d9f.js  precache-manifest.ab2df26c519b842889a0a817f8c94b38.js  precache-manifest.c26df266f63e3d2d555c353bedd01744.js  precache-manifest.ca3f3d6c04222a6be436adc87ccba9b9.js  precache-manifest.e665a81280b5966c10ba352b0c2b8bbf.js  service-worker.js  tsconfig.json
api/: Cargo.toml  (+1 more)
frontend/: Cargo.toml  README.md
frontend/public/: index.html
frontend/public/styles/: default.css  font.css  index.css  reset.css  vars.css
frontend/public/styles/components/: icon.css  link.css  navbar.css
frontend/public/styles/pages/: index.css  newbie.css
frontend/src/: app.rs  lib.rs  route.rs
frontend/src/components/: external_link.rs  icon.rs  internal_link.rs  mod.rs  navbar.rs
frontend/src/pages/: mod.rs
frontend/src/pages/index/: mod.rs
frontend/src/pages/newbie/: mod.rs
frontend/src/pages/stat/: mod.rs
frontend/src/pages/stat/solve/: mod.rs
(+91 files in other folders)
