[package]
name = "frontend"
version = "0.1.0"
authors = ["RanolP <public.ranolp@gmail.com>"]
edition = "2018"
description = "The frontend of daily-boj homepage"
repository = "https://github.com/daily-boj/daily-boj.github.io/blob/master/frontend"
license-file = "../LICENSE"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
panic = "abort"
codegen-units = 1
opt-level = "z"
lto = true

[features]
deploy = []

[dependencies]
url = "2.1.1"
wasm-bindgen = "0.2.63"
yew = { version = "0.16.2", features = ["web-sys"] }
yew-router = "0.13.0"

[target.'cfg(not(deploy))'.dependencies]
wasm-logger = "0.2.0"
log = "0.4.8"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"